<?xml version="1.0"?>
<package>
  <name>copernicus_base</name>
  <version>1.1.0</version>
  <description>The copernicus_base package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>
  
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
