<?xml version="1.0"?>
<package>
  <name>copernicus_control</name>
  <version>1.1.0</version>
  <description>The copernicus_control package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>

  <license>BSD-3-Clause</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>copernicus_msgs</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>copernicus_msgs</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>
  </export>
</package>
