<?xml version="1.0"?>
<package>
  <name>copernicus_description</name>
  <version>1.1.0</version>
  <description>The copernicus_description package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>

   <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>velodyne_description</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
