<?xml version="1.0"?>
<package format="2">
  <name>copernicus_localization</name>
  <version>1.1.0</version>
  <description>The copernicus_localization package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>robot_localization</exec_depend>
</package>
