<?xml version="1.0"?>
<package>
  <name>copernicus_navigation</name>
  <version>6.0.0</version>
  <description>The copernicus_navigation package</description>

  <maintainer email="nikhil@botsync.sg">Nikhil Venkatesh</maintainer>
  <author email="nikhil@botsync.sg">Nikhil Venkatesh</author>

  <url type="repository">https://bitbucket.org/botsync/copernicus</url>
  
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>map_server</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
