<?xml version="1.0"?>
<package>
  <name>copernicus_navigation</name>
  <version>1.1.0</version>
  <description>The copernicus_navigation package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>
  
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>map_server</run_depend>

  <export>
  </export>
</package>
