<?xml version="1.0"?>
<package format="2">
  <name>copernicus_rules</name>
  <version>1.1.0</version>
  <description>The copernicus_rules package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-usb</exec_depend>

  <export>
  </export>
</package>
