<?xml version="1.0"?>
<package>
  <name>copernicus_teleoperator</name>
  <version>0.0.0</version>
  <description>The copernicus_teleoperator package</description>

  <maintainer email="nikhil@botsync.sg">nikhil</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>copernicus_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>copernicus_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
