<?xml version="1.0"?>
<package format="2">
  <name>copernicus_teleoperator</name>
  <version>0.0.0</version>
  <description>The copernicus_teleoperator package</description>

  <maintainer email="nikhil@botsync.sg">nikhil</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>copernicus_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>teleop_twist_joy</depend>
  <export>
  </export>
</package>
