<?xml version="1.0"?>
<package format="2">
  <name>copernicus_teleoperator</name>
  <version>1.1.0</version>
  <description>The copernicus_teleoperator package</description>

  <author email="nikhil@botsync.co">Nikhil Venkatesh</author>
  <maintainer email="sachindevadiga894@gmail.com">Sachin Devadiga</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>geometry_msgs</depend>
  <depend>copernicus_msgs</depend>
  <depend>actionlib_msgs</depend>
  <export>
  </export>
</package>
